# mtg-limited-trainer

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  config.py  design.md  format_code.sh  main.py  main_v2.py  pyproject.toml  settings.py
.devcontainer/: devcontainer.json
github-scripts/: run-tests-for-modified.sh
resouces/sets/tdm/: card-ratings-2025-05-25.csv
resources/sets/fin/: card-ratings-2025-06-17.csv  card-ratings-2025-06-18.csv  card-ratings-2025-06-24.csv  card-ratings-2025-06-29.csv  exclude.csv
resources/sets/tdm/: card-ratings-2025-05-25.csv
src/: cards.py  config.py  data.py  display.py  game_logic.py  quiz.py
tests/: conftest.py  test_cards.py  test_data.py  test_display.py  test_game_logic.py  test_quiz.py
utilities/knapsack/: main.py
